syntax = "proto3";

import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

package ws;

message CursorPaginatedResponse {
  repeated google.protobuf.Any data = 1;
  int32 count = 2;
  optional string nextCursor = 3;
}

/**
 * Optional array wrappers
 */
message StringArray {
  repeated string values = 1;
}

message NumberArray {
  repeated double values = 1;
}

message BoolArray {
  repeated bool values = 1;
}

/**
 * Represents a single filter value, which can be a single value
 * (string, number, or bool) or optional arrays of each type.
 */
message FilterValue {
  // Non-repeated values (mutually exclusive)
  oneof single_value {
    string string_value = 1;
    double number_value = 2;
    bool bool_value = 3;
  }

  // Optional arrays
  optional StringArray string_array = 4;
  optional NumberArray number_array = 5;
  optional BoolArray bool_array = 6;
}

/**
 * Wrapper for snapshot response payload
 */
message CursorPaginatedSnapshotPayload {
  /**
   * The actual data for this snapshot.
   */
  CursorPaginatedResponse data = 1;

  /**
   * Filters applied for this subscription (optional)
   */
  map<string, FilterValue> appliedFilters = 2;
}

/**
 * Wrapper for fetchMore response payload
 */
message FetchMorePayload {
  CursorPaginatedResponse paginatedData = 1;
  map<string, FilterValue> appliedFilters = 2;
}

/**
 * Represents the status of a fetch response.
 */
enum FetchStatus {
  FETCH_STATUS_UNSPECIFIED = 0; // Default fallback (required by proto3)
  FETCH_STATUS_OK = 1;          // Successful response
  FETCH_STATUS_ERROR = 2;       // Generic error
  FETCH_STATUS_NOT_FOUND = 3;   // No data found
  FETCH_STATUS_UNAUTHORIZED = 4;// Permission denied / invalid token
  FETCH_STATUS_TIMEOUT = 5;     // Server timeout
}

/**
 * Represents the backend response to a one-time fetch request.
 * Includes a correlation ID, status, and the packed result data.
 */
message FetchResponsePayload {
  string requestId = 1;

  // Status code (e.g. "OK", "ERROR", "NOT_FOUND", etc.)
  FetchStatus status = 2;

  // Human-readable message (useful on errors)
  optional string message = 3;

  // The actual data payload, type packed in Any
  google.protobuf.Any data = 4;
}

/**
 * Each item in an update message
 */
message UpdateItem {
  string id = 1;

  enum Action {
    ADDED = 0;
    UPDATED = 1;
    DELETED = 2;
  }

  Action action = 2;

  // Optional data; only needed for added/updated
  google.protobuf.Any data = 3;

  // Optional version or sequence number used for updates
  optional int64 version = 4;
}

/**
 * Wrapper for update responses
 */
message UpdatesPayload {
  repeated UpdateItem items = 1;
  map<string, FilterValue> appliedFilters = 2;
}

enum RpcStatus {
  OK = 0;
  ERROR = 1;
}

message RpcPayload {
  string method = 1;
  RpcStatus status = 2;

  oneof result {
    RpcSuccessPayload success = 3;
    RpcErrorPayload error = 4;
  }
}

message RpcSuccessPayload {
  google.protobuf.Any data = 1;
}

message RpcErrorPayload {
  string errorCode = 1;
  optional string errorMessage = 2;
  google.protobuf.Struct details = 3;
}
